# lore-eligibility-platform

./: .gitignore  DEMO.md  Dockerfile.idv  PRESENTATION.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cost-estimate.md  data-quality-standards.md  migration-plan.md  pii-governance.md  slos.md
infra/demo/: DEMO-CLOUD.md  README.md  check-bedrock.sh  deploy-cli.sh  deploy.sh  main.tf  outputs.tf  teardown-cli.sh  teardown.sh  variables.tf  versions.tf
infra/terraform/: main.tf
pipelines/dagster_project/: assets.py  sensors.py
pipelines/soda/: checks.yml
samples/: golden_records_seed.json  partner_acme_employer.csv  partner_acme_employer.schema.yaml  partner_blueshield_payer.json  partner_northwind_aco.834.edi  verify_ineligible.json  verify_not_found.json  verify_request.json
schemas/avro/: eligibility_event.avsc
schemas/data_contracts/: partner_acme_employer_v1.yml
schemas/ddl/: 01_bronze.sql  02_silver.sql  03_gold.sql  04_aurora_idv.sql  05_cleansing_examples.sql
services/cdc_handler/: __init__.py  consumer.py
services/entity_resolution/: __init__.py  demo.py  embeddings.py  matcher.py  normalize.py
services/identity_verification_api/: __init__.py  main.py  models.py  store.py
services/pii_vault/: __init__.py  client.py
services/schema_inference/: __init__.py  cli.py  inference.py  prompts.py
slides/: README.md  index.html  slides.marp.md
tests/: test_cdc_handler.py  test_entity_resolution.py  test_idv_api.py  test_pii_vault.py  test_schema_inference.py
(+25 files in other folders)
