[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-eligibility-platform"
version = "0.1.0"
description = "Trusted Partner Eligibility & Identity Verification platform — Lore staff data engineer case study #3."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Perice Pope" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
    "pyyaml>=6",
    "black>=24",
]
pipelines = [
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "dbt-core>=1.7",
    "dbt-duckdb>=1.7",
    "soda-core-duckdb>=3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "PL"]
ignore = ["S101", "PLR2004", "PLR0913"]
per-file-ignores = { "tests/*" = ["S", "PLR"] }

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
